# OS_ExerciseAnwer

./: LICENSE  README.md  umalloc.c
01-2-spoc-discussion-answer/: 01-2-spoc-discussion.md  2.sh  2_IO  2_IO.c  3.sh  3_interupt  3_interupt.c  4.sh  4_DisMem  4_DisMem.c  CMakeLists.txt  README.md  build-dbg.sh  build-run.sh  build.sh  cleanup.sh  emhello  emhello.txt  os0  os1  os2  os3  xc  xem
01-2-spoc-discussion-answer/doc/: cpu.md
01-2-spoc-discussion-answer/test/: 2_IO.c
01-3-lab0-spoc-discussion-answer/: 01-3-lab0-spoc-discussion.md  funcall (注释).txt
02-1-spoc-discussion-answer/: lec 3 SPOC Discussion.md  lec 3 SPOC Discussion.md~
02-2-lab1-spoc-discussion-answer/: 02-2-lab1-spoc-discussion.md
03-1-spoc-discussion-answer/: 03-1-spoc-discussion.md  umalloc_first.c  umalloc_worst.c
03-2-spoc-discussion-answer/: in.txt  main.cpp
03-3-lab2-spoc-discussion-answer/: 03-3-lab2-spoc-discussion.md
04-1/: os5.c
04-1-spoc-discussion-answer/: V2P.md  a.out  disk.txt  main.cpp  mem.txt
04-2-spoc-discussion-answer/: 04-2-spoc-discussion.md  LRU.cpp  a.out  rate.cpp  work.py
04-3-lab3-spoc-discussion-Anwser/: 04-3-lab3-spoc-discussion.md
05-1-spoc-discussion-Answer/: process-concept-homework.py
05-2-spoc-discussion-Answer/: 05-2-spoc-discussion.md  init.c  process-cpuio-homework.py
05-3-lab4-spoc-discussion-Answer/: 05-3-思考题-answer.md
05-4-lab5-spoc-discussion-Answer/: 05-4-lab5-spoc-discussion.md
06-1-spoc-discussion-Answer/: scheduler-homework.py
06-2-lab6-spoc-discussion-Answer/: 06-2-lab6-spoc-discussion-ans_思考题.md
(+22 files in other folders)
